tests/base/invalid/DefiniteAssign_CompileFail_4.whiley
import whiley.lang.*:*

void System::f(string a):
    sys.out.println(a)

void ::main(System sys,[string] args):
    sys.out.println("HELLO")
    x.f("WORLD")
